# CMakeTemplate

./: .gitignore  CMakeLists.txt  README.md  VerFromHdr.cmake
LibTest/: CMakeLists.txt  config.cmake.in  config.h.in
LibTest/inc/: LibraryTest.h  api.h
LibTest/inc/LibTest/: LibraryTest.h  api.h
LibTest/src/: LibraryTest.cpp
Sandbox/: CMakeLists.txt  sandbox.cpp  sandbox.h
Tests/: CMakeLists.txt  Test1.cpp  Test2.cpp  macros.cmake
